--- a/AnousithExpress.web.mvc/Views/Admin/Customer.cshtml
+++ b/AnousithExpress.web.mvc/Views/Admin/Customer.cshtml
@@ -32,6 +32,7 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="form-horizontal text-center">
+                                <a class="btn btn-warning" href="@Url.Action("CreateCustomer","Admin")"><i class="fa fa-plus"></i> ສ້າງບັນຊີລຸກຄ້າ</a>
                                 <label style="font-weight:bold;">ລຽງຕາມ</label>
                                 <div class="form-check-inline form-check">
                                     <label for="inline-radio1" class="form-check-label ">
