--- a/AnousithExpress.web.mvc/Views/Shared/_AdminMenu.cshtml
+++ b/AnousithExpress.web.mvc/Views/Shared/_AdminMenu.cshtml
@@ -22,15 +22,17 @@
             <a href="@Url.Action("Customer","Admin")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-table"></i>ລຸກຄ້າ</a>
         </li>
         <li>
-            <a href="@Url.Action("ItemsInProcess","Customer")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-table"></i>ສີນຄ້າທີ່ຈະສົ່ງ</a>
+            <a href="@Url.Action("AllocateDeliveryMan","Admin")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-table"></i>ສີນຄ້າທີ່ຈະສົ່ງ</a>
         </li>
         <li>
             <a href="@Url.Action("ScanBarCode","Admin")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-barcode"></i>ສະແກນສີນຄ້າ</a>
         </li>
         <li>
-            <a href="@Url.Action("ItemHistoryListOfCustomer","Admin")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-book"></i>ຈຳນວນສີນຄ້າສົ່ງຂອງລຸກຄ້າ</a>
+            <a href="@Url.Action("ItemHistoryListOfCustomer","Admin")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-book"></i>ຈຳນວນເຄື່ອງສົ່ງ</a>
         </li>
-        
+        <li>
+            <a href="@Url.Action("ItemHistory","Admin")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-book"></i>ປະຫວັດການສົ່ງເຄື່ອງ</a>
+        </li>
         <li><a href="@Url.Action("ULogout","Account")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-sign-out"></i>ອອກຈາກລະບົບ</a></li>
     </ul>
 </div>
