--- a/AnousithExpress.web.mvc/Views/Admin/ConsolidationDetail.cshtml
+++ b/AnousithExpress.web.mvc/Views/Admin/ConsolidationDetail.cshtml
@@ -30,7 +30,7 @@
                             <td style="font-weight:bolder;">ຈຳນວນສີນຄ້າ</td>
                             <td>@Model.Detail.AmountOfItem</td>
                             <td style="font-weight:bolder;"></td>
-                            <td></td>
+                            <td><button class="btn btn-danger w-100" onclick="DeleteConsolidation(@Model.Detail.Id)">ລືບ</button></td>
                         </tr>
                     </table>
 
@@ -38,7 +38,7 @@
             </div>
             <div class="row">
                 <div class="col table-responsive">
-                    <table class="table table-striped table-bordered table-hover table-condensed display responsive no-wrap" id="tableItemDetail" style="width:100%; height:440px;">
+                    <table class="table table-striped table-bordered table-hover table-condensed display responsive no-wrap" id="tableItemDetail" style="width:100%;white-space:nowrap;">
                         <thead>
                             <tr>
                                 <th>ເລກຕິດຕາມສີນຄ້າ</th>
@@ -89,25 +89,55 @@
                     </table>
                 </div>
             </div>
-              
-                    
-          
+
+
+
+        </div>
+    </div>
+</div>
+<div class="modal" id="modalConsolidated">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div class="text-center" id="modalConsolidateMessage">
+
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-warning w-100" data-dismiss="modal" data-target="#modalConsolidated">ຕົກລົງ</button>
+            </div>
         </div>
     </div>
 </div>
 
-    <script type="text/javascript">
+<script type="text/javascript">
         jQuery(document).ready(function () {
             jQuery("#tableItemDetail").DataTable({
                 responsive: true,
-                paging: false,
+                paging: true,
+                lengthChange: false,
+                pageLength:10,
                 searching: false,
                 serverSide: false,
                 language: LaoLangage,
-                
+
             }).columns.adjust()
                 .responsive.recalc();
-       
+
+    });
+    function DeleteConsolidation(id) {
+        var consolidationId = id;
+        jQuery.ajax({
+            url: "/Admin/ConsolidationDelete",
+            data: { consolidationId: consolidationId },
+            datatype: "json",
+            type: "POST",
+            success: function (r) {
+                jQuery("#modalConsolidateMessage").html("ສຳເລັດ");
+                jQuery("#modalConsolidated").modal("show");
+                consolidateTable.ajax.reload(null, false);
+            }
         });
-    </script>
-    
+    }
+</script>
+
