--- a/AnousithExpress.web.mvc/Views/Admin/ItemHistoryListOfCustomer.cshtml
+++ b/AnousithExpress.web.mvc/Views/Admin/ItemHistoryListOfCustomer.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "ປະຫວັດການສົ່ງເຄື່ອງ";
+    ViewBag.Title = "ຈຳນວນເຄື່ອງສົ່ງ";
     Layout = "~/Views/Shared/_CustomerLayout.cshtml";
 }
 @model List<AnousithExpress.DataEntry.ViewModels.Admin.ItemHistoryModel>
@@ -44,15 +44,15 @@
                                     <input type="text" placeholder="ວັນ-ເດືອນ-ປີ" class="w-100" name="toDateH" readonly="readonly"  />
 
                                 </div>
-                              
+                                <div class="">
+                                    <button class="btn btn-warning" style="margin-top:30px;" onclick="searchCustomerHistory()">ຄົ້ນຫາ</button>
+                                </div>
                                     
 
                         
                             </div>    
                             <div class="row">
-                                <div class="col text-center">
-                                    <button class="btn btn-warning col-1" onclick="searchCustomerHistory()">ຄົ້ນຫາ</button>
-                                </div>
+                                
                             </div>
                             <div class="table-responsive">
                                 <table id="customerDataTable" class="table table-striped table-bordered" style="width:100%;white-space:nowrap;">
