--- a/AnousithExpress.web.mvc/Views/Shared/_CustomerLayout.cshtml
+++ b/AnousithExpress.web.mvc/Views/Shared/_CustomerLayout.cshtml
@@ -75,74 +75,74 @@ else
                         <button class="search-trigger"><i class="fa fa-search"></i></button>
                         <div class="form-inline">
                             <form class="search-form">
-                                <input class="form-control mr-sm-2" type="text" placeholder="Search ..." aria-label="Search">
+                                <input class="form-control mr-sm-2" type="text" id="searchTextBox" placeholder="Search ..." aria-label="Search">
                                 <button class="search-close" type="submit"><i class="fa fa-close"></i></button>
                             </form>
                         </div>
                         <div class="dropdown for-notification">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="notification" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <i class="fa fa-bell"></i>
-                                <span class="count bg-danger">5</span>
+                                <span class="count bg-danger" id="notificationNumber"></span>
                             </button>
-                            <div class="dropdown-menu" aria-labelledby="notification">
-                                <p class="red">You have 3 Notification</p>
-                                <a class="dropdown-item media bg-flat-color-1" href="#">
-                                    <i class="fa fa-check"></i>
-                                    <p>Server #1 overloaded.</p>
-                                </a>
-                                <a class="dropdown-item media bg-flat-color-4" href="#">
-                                    <i class="fa fa-info"></i>
-                                    <p>Server #2 overloaded.</p>
-                                </a>
-                                <a class="dropdown-item media bg-flat-color-5" href="#">
-                                    <i class="fa fa-warning"></i>
-                                    <p>Server #3 overloaded.</p>
-                                </a>
-                            </div>
+                            @*<div class="dropdown-menu" aria-labelledby="notification">
+                                    <p class="red">You have 3 Notification</p>
+                                    <a class="dropdown-item media bg-flat-color-1" href="#">
+                                        <i class="fa fa-check"></i>
+                                        <p>Server #1 overloaded.</p>
+                                    </a>
+                                    <a class="dropdown-item media bg-flat-color-4" href="#">
+                                        <i class="fa fa-info"></i>
+                                        <p>Server #2 overloaded.</p>
+                                    </a>
+                                    <a class="dropdown-item media bg-flat-color-5" href="#">
+                                        <i class="fa fa-warning"></i>
+                                        <p>Server #3 overloaded.</p>
+                                    </a>
+                                </div>*@
                         </div>
-                        <div class="dropdown for-message">
-                            <button class="btn btn-secondary dropdown-toggle" type="button"
-                                    id="message"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="ti-email"></i>
-                                <span class="count bg-primary">9</span>
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="message">
-                                <p class="red">You have 4 Mails</p>
-                                <a class="dropdown-item media bg-flat-color-1" href="#">
-                                    <span class="photo media-left"><img alt="avatar" src="images/avatar/1.jpg"></span>
-                                    <span class="message media-body">
-                                        <span class="name float-left">Jonathan Smith</span>
-                                        <span class="time float-right">Just now</span>
-                                        <p>Hello, this is an example msg</p>
-                                    </span>
-                                </a>
-                                <a class="dropdown-item media bg-flat-color-4" href="#">
-                                    <span class="photo media-left"><img alt="avatar" src="images/avatar/2.jpg"></span>
-                                    <span class="message media-body">
-                                        <span class="name float-left">Jack Sanders</span>
-                                        <span class="time float-right">5 minutes ago</span>
-                                        <p>Lorem ipsum dolor sit amet, consectetur</p>
-                                    </span>
-                                </a>
-                                <a class="dropdown-item media bg-flat-color-5" href="#">
-                                    <span class="photo media-left"><img alt="avatar" src="images/avatar/3.jpg"></span>
-                                    <span class="message media-body">
-                                        <span class="name float-left">Cheryl Wheeler</span>
-                                        <span class="time float-right">10 minutes ago</span>
-                                        <p>Hello, this is an example msg</p>
-                                    </span>
-                                </a>
-                                <a class="dropdown-item media bg-flat-color-3" href="#">
-                                    <span class="photo media-left"><img alt="avatar" src="images/avatar/4.jpg"></span>
-                                    <span class="message media-body">
-                                        <span class="name float-left">Rachel Santos</span>
-                                        <span class="time float-right">15 minutes ago</span>
-                                        <p>Lorem ipsum dolor sit amet, consectetur</p>
-                                    </span>
-                                </a>
-                            </div>
-                        </div>
+                        @*<div class="dropdown for-message">
+                                <button class="btn btn-secondary dropdown-toggle" type="button"
+                                        id="message"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <i class="ti-email"></i>
+                                    <span class="count bg-primary">9</span>
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="message">
+                                    <p class="red">You have 4 Mails</p>
+                                    <a class="dropdown-item media bg-flat-color-1" href="#">
+                                        <span class="photo media-left"><img alt="avatar" src="images/avatar/1.jpg"></span>
+                                        <span class="message media-body">
+                                            <span class="name float-left">Jonathan Smith</span>
+                                            <span class="time float-right">Just now</span>
+                                            <p>Hello, this is an example msg</p>
+                                        </span>
+                                    </a>
+                                    <a class="dropdown-item media bg-flat-color-4" href="#">
+                                        <span class="photo media-left"><img alt="avatar" src="images/avatar/2.jpg"></span>
+                                        <span class="message media-body">
+                                            <span class="name float-left">Jack Sanders</span>
+                                            <span class="time float-right">5 minutes ago</span>
+                                            <p>Lorem ipsum dolor sit amet, consectetur</p>
+                                        </span>
+                                    </a>
+                                    <a class="dropdown-item media bg-flat-color-5" href="#">
+                                        <span class="photo media-left"><img alt="avatar" src="images/avatar/3.jpg"></span>
+                                        <span class="message media-body">
+                                            <span class="name float-left">Cheryl Wheeler</span>
+                                            <span class="time float-right">10 minutes ago</span>
+                                            <p>Hello, this is an example msg</p>
+                                        </span>
+                                    </a>
+                                    <a class="dropdown-item media bg-flat-color-3" href="#">
+                                        <span class="photo media-left"><img alt="avatar" src="images/avatar/4.jpg"></span>
+                                        <span class="message media-body">
+                                            <span class="name float-left">Rachel Santos</span>
+                                            <span class="time float-right">15 minutes ago</span>
+                                            <p>Lorem ipsum dolor sit amet, consectetur</p>
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>*@
                     </div>
                 </div>
                 <div class="col-sm-5">
@@ -171,6 +171,29 @@ else
     </div><!-- /#right-panel -->
     <!-- Right Panel -->
 
+    <div class="modal fade" id="modalNotification">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body">
+                    ທ່ານມີສີນຄ້າມາໃຫມ່ໄຫ້ໄປຮັບເພີ່ມ <strong id="numberofItem"></strong> ອັນ ກະລຸນາກວດສອບ
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modalNotification2">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body">
+                 <strong id="modalsearchMessage"></strong>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-primary w-100" data-dismiss="modal" data-target="#modalNotification2">ອອກ</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
     <script src="~/assets/js/popper.min.js"></script>
     <script src="~/assets/js/plugins.js"></script>
@@ -192,7 +215,47 @@ else
     <script src="~/assets/js/jQuery-datePicker.lao.js"></script>
 
     <script src="~/assets/js/DatatableVariable.js"></script>
+    <script>
+        var itemNum = 0;
+        jQuery(document).ready(function () {
+            notificationNum();
+            setInterval(notificationNum, 10000);
+            jQuery("#searchTextBox").keypress(function (e) {
+                if (event.which==13) {
+                    jQuery.ajax({
+                        url: "/Admin/searchBox",
+                        data: { input: jQuery(this).val() },
+                        datatype: "json",
+                        type: "GET",
+                        success: function (r) {
+                            if (r.t===1 && r.id>0) {
+                                window.location = '@Url.Action("CustomerItemList","Admin")?customerId=' + r.id +'&tabIndex=5';
+                            }
+                            if (r.t===2 && r.id>0) {
+                                window.location = '@Url.Action("ItemsDetail", "Admin")?itemId=' +  r.id;
+                            }
+                            else {
+                                jQuery("#modalsearchMessage").html("ບໍ່ສາມາດຊອກລາຍການດັ່ງກ່າວຢູ່ຖານຂໍ່ມູນ");
+                                jQuery("#modalNotification2").modal("show");
+                            }
+                        }
+                    });
+                }
 
+            });
+        });
+        function notificationNum() {
+            jQuery.ajax({
+                url: "/Admin/GetNotification",
+                type: "GET",
+                datatype: "json",
+                success: function (r) {
+                    jQuery("#notificationNumber").html(r);
+                    itemNum = r;
+                }
+            });
+        }
+    </script>
 
     @RenderSection("scripts", required: false)
 </body>
