--- a/AnousithExpress.web.mvc/Views/Admin/ItemsTransporting.cshtml
+++ b/AnousithExpress.web.mvc/Views/Admin/ItemsTransporting.cshtml
@@ -29,6 +29,7 @@
                     <td>@item.ReceiverName</td>
                     <td>@item.ReceipverPhone</td>
                     <td>@item.ReceiverAddress</td>
+                    <td>print</td>
                     <td><button class="btn btn-warning" onclick="barcodeDialog(@item.Id)">ປລີ້ນບາໂຄດ</button></td>
                     <td>@item.ReceiveDate</td>
                     <td>@item.SendingDate</td>
