--- a/AnousithExpress.web.mvc/Views/Shared/_AdminMenu.cshtml
+++ b/AnousithExpress.web.mvc/Views/Shared/_AdminMenu.cshtml
@@ -30,8 +30,12 @@
         <li>
             <a href="@Url.Action("ItemHistoryListOfCustomer","Admin")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-book"></i>ຈຳນວນເຄື່ອງສົ່ງ</a>
         </li>
+
         <li>
             <a href="@Url.Action("ItemHistory","Admin")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-book"></i>ປະຫວັດການສົ່ງເຄື່ອງ</a>
+        </li>
+        <li>
+            <a href="@Url.Action("ConsolidateAllConsolidate","Admin")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-book"></i>ສັງລວມທັງຫມົດ</a>
         </li>
         <li><a href="@Url.Action("ULogout","Account")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-sign-out"></i>ອອກຈາກລະບົບ</a></li>
     </ul>
