--- a/AnousithExpress.web.mvc/Views/Admin/Index.cshtml
+++ b/AnousithExpress.web.mvc/Views/Admin/Index.cshtml
@@ -141,6 +141,21 @@
                 </div>
             </a>
 
+            <a href="@Url.Action("ConsolidateAllConsolidate","Admin")">
+                <div class="col-sm-6 col-lg-3">
+                    <div class="card text-white bg-flat-color-1">
+                        <div class="card-body pb-0">
+                            <div class="dropdown float-right">
+                                <i class="fa fa-cog"></i>
+                            </div>
+                            <h4 class="mb-0">
+                                <span class="count"> </span>
+                            </h4>
+                            <p class="text-light">ສັງລວມທັງຫມົດ</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
 
             <a href="@Url.Action("ULogout","Account")">
                 <div class="col-sm-6 col-lg-3">
