--- a/AnousithExpress.web.mvc/Views/Shared/_AdminMenu.cshtml
+++ b/AnousithExpress.web.mvc/Views/Shared/_AdminMenu.cshtml
@@ -32,13 +32,13 @@
         </li>
 
         <li>
-            <a href="@Url.Action("Index","TbRoutes")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-book"></i>ເພີ້ມເສັ້ນທາງ</a>
+            <a href="@Url.Action("Index","Routes")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-book"></i>ເພີ້ມເສັ້ນທາງ</a>
         </li>
         <li>
-            <a href="@Url.Action("Index","TbTimes")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-book"></i>ເພີ້ມເວລາ</a>
+            <a href="@Url.Action("Index","Times")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-book"></i>ເພີ້ມເວລາ</a>
         </li>
         <li>
-            <a href="@Url.Action("Index","TbPrices")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-book"></i>ເພີ້ມລາຄາ</a>
+            <a href="@Url.Action("Index","Prices")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-book"></i>ເພີ້ມລາຄາ</a>
         </li>
         <li>
             <a href="@Url.Action("ItemHistory","Admin")" style="font-family:'Phetsarath OT';"><i class="menu-icon fa fa-book"></i>ປະຫວັດການສົ່ງເຄື່ອງ</a>
