--- a/AnousithExpress.web.mvc/Views/Account/CLogin.cshtml
+++ b/AnousithExpress.web.mvc/Views/Account/CLogin.cshtml
@@ -36,9 +36,10 @@
         <div class="container">
             <div class="login-content">
                 <div class="login-logo">
-                   
-                        <img class="align-content" src="~/assets/Image/anoutsithlogo.png" height="70" alt="">
-                   
+
+                    <img src="~/assets/Image/logo.png" height="70" />
+                
+
                 </div>
                 <div class="login-form">
                     <form id="loginForm">
