--- a/AnousithExpress.web.mvc/Views/Account/CLogin.cshtml
+++ b/AnousithExpress.web.mvc/Views/Account/CLogin.cshtml
@@ -37,7 +37,7 @@
             <div class="login-content">
                 <div class="login-logo">
 
-                    <img src="~/assets/Image/logo.png" height="70" />
+                    <img src="~/assets/Image/anoutsithlogo.png" height="70" />
                 
 
                 </div>
