--- a/AnousithExpress.web.mvc/Views/Admin/BarCodeReport.cshtml
+++ b/AnousithExpress.web.mvc/Views/Admin/BarCodeReport.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model AnousithExpress.DataEntry.ViewModels.Customer.ItemsModel
+@model AnousithExpress.DataEntry.ViewModels.Admin.ItemBarCodeModel
 
 
 <div class="row">
@@ -7,10 +7,10 @@
     <div class="col-md-4">
         <div style="width:80mm;border:1px solid">
             <img style="align-items:center" src="~/Images/logo.png" width="100px" height="50px;" />
-            <div style="text-align:left; padding-left:10px;">ເລກທີ: @Model.TrackingNumber</div>
-            <div style="text-align:left; padding-left:10px;">ຜູ້ຝາກ: @Model.CustomerName</div>
+            <div style="text-align:left; padding-left:10px;">ເລກທີ: @Model.Trackingnumber</div>
+            <div style="text-align:left; padding-left:10px;">ຜູ້ຝາກ: @Model.SenderName</div>
             <div style="text-align:left; padding-left:10px;">ຜູ້ຮັບ: @Model.ReceiverName</div>
-            <div style="text-align:left; padding-left:10px;">ເບີໂທ: @Model.ReceipverPhone</div>
+            <div style="text-align:left; padding-left:10px;">ເບີໂທ: @Model.ReceiverPhoenumber</div>
             <div style="text-align:left; padding-left:10px;">ທີຢູ່: @Model.ReceiverAddress</div>
 
             <br />
